<resources>
    <string name="app_name">Schedule</string>

    <string name="note_title_toolbar">Notes</string>

    <string name="menu_nav_main_month">Month</string>
    <string name="menu_nav_main_day">Day</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may_abbreviated">May</string>
    <string name="june_abbreviated">June</string>
    <string name="july_abbreviated">July</string>
    <string name="aug">Aug</string>
    <string name="sept">Sept</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="tab_title_mon">Mon</string>
    <string name="tab_title_tues">Tues</string>
    <string name="tab_title_wed">Wed</string>
    <string name="tab_title_thurs">Thu</string>
    <string name="tab_title_fri">Fri</string>
    <string name="tab_title_sat">Sat</string>
    <string name="tab_title_sun">Sun</string>

    <string name="tab_title_mon_main">M</string>
    <string name="tab_title_tues_main">T</string>
    <string name="tab_title_wed_main">W</string>
    <string name="tab_title_thurs_main">T</string>
    <string name="tab_title_fri_main">F</string>
    <string name="tab_title_sat_main">S</string>
    <string name="tab_title_sun_main">S</string>

    <string name="menu_bottom_nav_homework">Notes</string>
    <string name="menu_bottom_nav_schedule">Schedule</string>

    <string name="et_lesson">Lesson</string>
    <string name="et_teacher">Teacher</string>
    <string name="et_auditorium">Auditorium</string>
    <string name="et_required_field">*Required field</string>
    <string name="btn_start_time_schedule">Start</string>
    <string name="btn_end_time_schedule">End</string>
    <string name="btn_hint_week_schedule">A week</string>
    <string name="btn_default_week">Default: every week</string>

    <string name="btn_hint_image_note">Image</string>
    <string name="btn_hint_image_plus_note">Image +</string>
    <string name="btn_hint_color_note">Color</string>
    <string name="btn_hint_deadline_note">Deadline</string>

    <string name="et_note">Note</string>

    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="every_week">Every week</string>

    <string name="there_are_lessons_at_this_time">There are lessons at this time</string>

    <string name="title_dialog_select_week">Select week</string>
    <string name="title_dialog_remove_schedule">Remove schedule</string>
    <string name="title_dialog_remove_note">Remove notes</string>
    <string name="title_dialog_select_color">Select color</string>

    <string name="btn_dropping">Dropping</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_select">Select</string>

    <string name="no_lesson">No lessons</string>
    <string name="img_no_lesson">No lessons</string>

    <string name="no_notes">No notes</string>
    <string name="img_no_notes">No notes</string>

    <string name="img_deadline">Deadline</string>
    <string name="img_change_mode_calendar">Change mode of calendar</string>

    <string name="grid">Grid</string>
    <string name="dashboard">Dashboard</string>
    <string name="list">List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Sync Preferences -->
    <string name="theme_mode_title">Dark theme</string>
    <string name="number_of_week">Number of repeating weeks</string>
    <string name="this_week">Current week</string>
    <string name="names_week">Names</string>
    <string name="name">Name</string>

    <string name="type_of_assessment">Type of exam</string>
    <string name="exam">Exam</string>
    <string name="test">Test</string>
    <string name="test_with_an_assessment">Test with an assessment</string>
    <string name="note_image">note image</string>

    <string name="warning_load_image">Failed to upload photo</string>
</resources>
