<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/type_of_assessment"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_dialog"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exam"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_with_an_assessment"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
    </RadioGroup>
    <TableRow
        android:layout_below="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_negative_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonNegativeStyle"
                android:theme="@style/ButtonNegativeStyle"
                android:text="@string/btn_dropping"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"/>
    </TableRow>
</RelativeLayout>