<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_dialog_select_week"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_dialog"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radioButtonWeek1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioButtonWeek2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week2"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioButtonEveryWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_week"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_below="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="15dp"
        android:paddingBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonNegativeStyle"
            android:theme="@style/ButtonNegativeStyle"
            android:text="@string/btn_cancel"/>
    </LinearLayout>
</RelativeLayout>