<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_select_color"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/title_dialog"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/recyclerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dropping_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dropping"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_select"
            tools:ignore="RelativeOverlap" />
    </TableRow>
</RelativeLayout>