<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_dialog_remove_schedule"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_below="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="15dp"
        android:paddingBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonNegativeStyle"
            android:theme="@style/ButtonNegativeStyle"
            android:text="@string/btn_remove"/>
    </LinearLayout>
</RelativeLayout>