<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:menu="@menu/menu_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_note_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_note"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/et_required_field"
                    android:textSize="12sp"
                    android:layout_marginStart="3dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lesson_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_lesson"
                    android:layout_marginTop="10dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_calendar_week"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_deadline_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:hint="@string/btn_hint_deadline_note"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_palette"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_bg_color_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:hint="@string/btn_hint_color_note"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_image"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_image_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:hint="@string/btn_hint_image_note"/>

                </TableRow>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    tools:listitem="@layout/item_images"/>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_back_fab"
            android:focusable="true"
            android:layout_margin="@dimen/fab_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</FrameLayout>