<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:id="@+id/table_row_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_view_grid"
                android:contentDescription="@string/grid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                android:textSize="18sp"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"/>
    </TableRow>

    <TableRow
        android:id="@+id/table_row_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_view_dashboard"
                android:contentDescription="@string/dashboard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textSize="18sp"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"/>
    </TableRow>

    <TableRow
        android:id="@+id/table_row_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_view_list"
                android:contentDescription="@string/list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textSize="18sp"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"/>
    </TableRow>
</LinearLayout>